Fix vertical alignment of menu icons
Bug: T285172

--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -24,6 +24,10 @@ body {
 	max-width: 900px;
 	margin: 0 auto;
 	padding: 10px 0;
+
+	img {
+		display: block;
+	}
 }
 
 header,
